# picture_lib

./: CMakeLists.txt  main.c
src/: CMakeLists.txt  DCT_coefficients.h  bmp_codec.c  bmp_codec.h  huffman.c  huffman.h  jpg_codec.c  jpg_codec.h  jpg_common.h
